Se agrega recomendaciones, mas tests, nuevo readme
