# app/controller/interests-rule-controller.go
@@ -9,16 +9,17 @@ import (
 )
 
 type InterestsRuleController struct {
-	Repo persistence.RulesPersistence
+	Repo persistence.IRulesRepository
 }
 
 // ModifyInterestsRule     	godoc
 // @Summary      						Update the interests rule' status for recommended trainings.
 // @Description  						Update the interests rule' status for recommended trainings.
 // @Tags										Interests Rule
+// @Param										user_info header string true "Proximity rule changes"
 // @Accept									json
 // @Produce									json
-// @Param										rule body InterestsRule true "Interests rule changes"
+// @Param										rule body model.InterestsRule true "Interests rule changes"
 // @Success      						201
 // @Failure									400
 // @Failure									500
@@ -30,6 +31,7 @@ func (controller *InterestsRuleController) ModifyInterestsRule(c *gin.Context) {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": err.Error()})
 		return
 	}
+
 	err = controller.Repo.UpdateInterestsRule(&input)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
@@ -43,8 +45,9 @@ func (controller *InterestsRuleController) ModifyInterestsRule(c *gin.Context) {
 // @Summary      						Get the current settings of the interests rule.
 // @Description  						Get the current settings of the interests rule.
 // @Tags										Interests Rule
+// @Param										user_info header string true "Proximity rule changes"
 // @Produce									json
-// @Success      						200 {object} InterestsRule
+// @Success      						200 {object} model.InterestsRule
 // @Failure									500
 // @Router       						/rules/interests [get]
 func (controller *InterestsRuleController) GetInterestsRule(c *gin.Context) {
