# app/routes/router.go
@@ -2,13 +2,15 @@ package routes
 
 import (
 	controller "github.com/T2-1c2023/RecommendationService/app/controller"
+	"github.com/T2-1c2023/RecommendationService/app/validation"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 func SetupRouter(proximityController *controller.ProximityRuleController,
-	interestsController *controller.InterestsRuleController) *gin.Engine {
+	interestsController *controller.InterestsRuleController,
+	recommendationController *controller.RecommendationController) *gin.Engine {
 	// Create a new Gin router
 	router := gin.Default()
 
@@ -18,11 +20,26 @@ func SetupRouter(proximityController *controller.ProximityRuleController,
 
 	router.GET("/health", controller.GetHealth)
 
-	router.PATCH("/rules/proximity", proximityController.ModifyProximityRule)
-	router.GET("/rules/proximity", proximityController.GetProximityRule)
+	router.PATCH("/rules/proximity",
+		validation.UserInfoHeaderValidator,
+		validation.AdminValidator,
+		proximityController.ModifyProximityRule)
+	router.GET("/rules/proximity",
+		validation.AdminValidator,
+		proximityController.GetProximityRule)
 
-	router.PATCH("/rules/interests", interestsController.ModifyInterestsRule)
-	router.GET("/rules/interests", interestsController.GetInterestsRule)
+	router.PATCH("/rules/interests",
+		validation.UserInfoHeaderValidator,
+		validation.AdminValidator,
+		interestsController.ModifyInterestsRule)
+	router.GET("/rules/interests",
+		validation.UserInfoHeaderValidator,
+		validation.AdminValidator,
+		interestsController.GetInterestsRule)
+
+	router.GET("/recommended",
+		validation.UserInfoHeaderValidator,
+		recommendationController.GetRecommendations)
 
 	return router
 }
